Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOQjNgTjGljXdciYvxyi4tl",
+      "authorship_tag": "ABX9TyMCHxJsDRK+nU/jx5fSYSPV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -676,7 +676,7 @@
         "  cout << PI;\n",
         "}\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -699,7 +699,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -736,7 +736,7 @@
         "  cout << num2 << endl;\n",
         "}\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -759,7 +759,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,7 +804,7 @@
         "#   cout << \"Sum is: \" << sum;\n",
         "# }"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -834,7 +834,7 @@
         "id": "dhdSYbsdfZLM",
         "outputId": "80daa8e6-e5fb-4999-96a0-b3ce83ba49d4"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -857,7 +857,7 @@
         "id": "C_gKDaYUfozj",
         "outputId": "6b4c6528-062b-4dee-d233-53d1a81a565d"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -894,6 +894,77 @@
     {
       "cell_type": "code",
       "source": [
+        "# getargs 実験\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "const string  str = R\"(\n",
+        "2 3   \\n\n",
+        "tiis is a ペン\n",
+        ")\";\n",
+        "\n",
+        "int main(){\n",
+        "    stringstream ss(str);\n",
+        "    vector<string> args;\n",
+        "    string arg;\n",
+        "    regex separator{R\"([\\n\\s,;.]+)\"};\n",
+        "    auto ite = sregex_token_iterator(str.begin(), str.end(), separator, -1);\n",
+        "    auto end = sregex_token_iterator();\n",
+        "    while (ite != end) {\n",
+        "    args.push_back(*ite++);     // 分割文字列を格納\n",
+        "    }\n",
+        "\n",
+        "    for (int i = 0; i < args.size(); i++) {\n",
+        "        cout << args[i] << \" \" ;\n",
+        "    }\n",
+        "    cout << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "3LsnxpecNo1-",
+        "outputId": "3d9ff88b-7fb5-428b-b512-27424f0b4d5d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "G6E23KPXN52q",
+        "outputId": "4f7314e1-6a01-46ae-e866-11cdd580cb4b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " 2 3 \\n tiis is a ペン \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# heredocument から変数への入力実験\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
@@ -924,9 +995,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W2iNf4roPALx",
-        "outputId": "363f41a1-0b4d-4541-db90-a4fe3cabc895"
+        "outputId": "d49ee7e6-2bb0-4c94-d4e7-c4273667aa8e"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -947,9 +1018,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ivp5uovGP6AU",
-        "outputId": "1ba1ed7d-a8a5-4a24-b6e6-abd267667f26"
+        "outputId": "5db5e8d9-66d7-40b5-9da6-962435e56cf7"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -1794,7 +1865,7 @@
         },
         "outputId": "2a641cf6-c3a1-4fa4-a54d-a6c72135ed9b"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1817,7 +1888,7 @@
         },
         "outputId": "cc72a8f9-6743-4120-98c3-9f06a6754b2f"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
