--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,7 +6,7 @@
       "name": "temp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM08tOkoSp4aqV+PSPQPdKm",
+      "authorship_tag": "ABX9TyOfsOa+9Rng0XUfl6HCXo7S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,65 @@
       "metadata": {
         "id": "KBSwAUuU4s_Y"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# c++ で regex を使って行末の空白を取り除く \n",
+        "# \"this  \" を ”this\" に出来ればよい\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main(){\n",
+        "    string str = \"this is \";\n",
+        "    cout << str << \": \" << str.size() << endl;\n",
+        "    regex re{R\"([\\s]*$)\"};\n",
+        "    string str02 = regex_replace(str, re, \"\");\n",
+        "    cout << str02 << \": \" << str02.size() << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "_94N1A3QiZCC",
+        "outputId": "ce64af64-3ff8-49ee-928e-ff16c328ac93",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo |./a.out"
+      ],
+      "metadata": {
+        "id": "vGP1Dnboi86o",
+        "outputId": "2e66bb39-0f98-4358-b36d-3b273d03876a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "this is : 8\n",
+            "this is: 7\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -69,7 +128,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,7 +151,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
