Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyODCjncOAdXWdASVO+PXp7K",
+      "authorship_tag": "ABX9TyNugBVcOtEou2Y3dbQSwnOg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1298,15 +1298,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "ldKd1YFL6Rpu"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 最小値・最大値 min/max\n",
@@ -1360,51 +1351,50 @@
         "!g++ temp.cpp; echo |./a.out"
       ],
       "metadata": {
-        "id": "ta5KhfDJxDOI",
-        "outputId": "10c6ee22-694d-44df-a4d9-7152e855f85d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "ta5KhfDJxDOI"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "168\n",
-            "2147483647\n",
-            "0\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# 上の例がなんだかよくわからないので実験\n",
+        "# 問題 vector の最小値・最大値を求める関数を作る\n",
         "%%writefile temp.cpp\n",
-        "#include <bits/stdc++.h>\n",
+        "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
+        "int myMax(const vector<int>& v) {\n",
+        "    int max = numeric_limits<int>::min();\n",
+        "    for (auto e : v) if (e > max) max = e;\n",
+        "    return max;\n",
+        "}\n",
+        "\n",
+        "int myMax02(const vector<int>& vec){\n",
+        "    return *max_element(vec.begin(), vec.end());\n",
+        "}\n",
+        "\n",
+        "int myMin(const vector<int>& v) {\n",
+        "    int min = numeric_limits<int>::max();\n",
+        "    for (auto e : v) if (e < min) min = e;\n",
+        "    return min;\n",
+        "}\n",
+        "\n",
+        "int myMin02(const vector<int>& vec){\n",
+        "    return *min_element(vec.begin(), vec.end());\n",
+        "}\n",
+        "\n",
         "int main() {\n",
-        "    vector<double> vecdata {2.5, -3.5, -21.1, -1.99, 0.129, 3.111};\n",
-        "\n",
-        "    // min は vector には使えないので配列に変換してみる\n",
-        "    double *d_arr = vecdata.data();  // %vecdata[0] でも行けるみたい。いずれにしても min の引数に直接は無理\n",
-        "    double minx = 2147483647;\n",
-        "    for (int i = 0; i < vecdata.size(); i++) minx = min(minx, d_arr[i]);\n",
-        "    cout << minx << endl;\n",
-        "\n",
-        "    // cout << min(d_arr) << endle;\n",
-        "\n",
-        "    // *min_element は使える\n",
-        "    cout << *min_element (vecdata.begin(), vecdata.end());\n",
+        "    vector<int> vex = {1, 2, 3, 4, 5};\n",
+        "    assert(myMax(vex) == 5);\n",
+        "    assert(myMax02(vex) == 5);\n",
+        "    assert(myMin(vex) == 1);\n",
+        "    assert(myMin02(vex) == 1);\n",
         "}"
       ],
       "metadata": {
-        "id": "k-omeX-Nxb7R",
-        "outputId": "7952b560-f79e-4aab-eac0-7557aa3f7e81",
+        "id": "rsikTRoXXy2j",
+        "outputId": "fbce1cf9-ce47-4827-e677-0826547fddce",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1416,86 +1406,6 @@
           "name": "stdout",
           "text": [
             "Overwriting temp.cpp\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!g++ temp.cpp; echo |./a.out"
-      ],
-      "metadata": {
-        "id": "wKuHgBDhxb3r",
-        "outputId": "a86f3878-36a7-428b-bcbb-7efa94fbc6f7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[01m\u001b[Ktemp.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kint main()\u001b[m\u001b[K’:\n",
-            "\u001b[01m\u001b[Ktemp.cpp:13:22:\u001b[m\u001b[K \u001b[01;31m\u001b[Kerror: \u001b[m\u001b[Kno matching function for call to ‘\u001b[01m\u001b[Kmin(double*&)\u001b[m\u001b[K’\n",
-            "     cout << min(d_arr\u001b[01;31m\u001b[K)\u001b[m\u001b[K << endle;\n",
-            "                      \u001b[01;31m\u001b[K^\u001b[m\u001b[K\n",
-            "In file included from \u001b[01m\u001b[K/usr/include/c++/7/bits/char_traits.h:39:0\u001b[m\u001b[K,\n",
-            "                 from \u001b[01m\u001b[K/usr/include/c++/7/ios:40\u001b[m\u001b[K,\n",
-            "                 from \u001b[01m\u001b[K/usr/include/c++/7/istream:38\u001b[m\u001b[K,\n",
-            "                 from \u001b[01m\u001b[K/usr/include/c++/7/sstream:38\u001b[m\u001b[K,\n",
-            "                 from \u001b[01m\u001b[K/usr/include/c++/7/complex:45\u001b[m\u001b[K,\n",
-            "                 from \u001b[01m\u001b[K/usr/include/c++/7/ccomplex:39\u001b[m\u001b[K,\n",
-            "                 from \u001b[01m\u001b[K/usr/include/x86_64-linux-gnu/c++/7/bits/stdc++.h:52\u001b[m\u001b[K,\n",
-            "                 from \u001b[01m\u001b[Ktemp.cpp:1\u001b[m\u001b[K:\n",
-            "\u001b[01m\u001b[K/usr/include/c++/7/bits/stl_algobase.h:195:5:\u001b[m\u001b[K \u001b[01;36m\u001b[Knote: \u001b[m\u001b[Kcandidate: template<class _Tp> constexpr const _Tp& std::min(const _Tp&, const _Tp&)\n",
-            "     \u001b[01;36m\u001b[Kmin\u001b[m\u001b[K(const _Tp& __a, const _Tp& __b)\n",
-            "     \u001b[01;36m\u001b[K^~~\u001b[m\u001b[K\n",
-            "\u001b[01m\u001b[K/usr/include/c++/7/bits/stl_algobase.h:195:5:\u001b[m\u001b[K \u001b[01;36m\u001b[Knote: \u001b[m\u001b[K  template argument deduction/substitution failed:\n",
-            "\u001b[01m\u001b[Ktemp.cpp:13:22:\u001b[m\u001b[K \u001b[01;36m\u001b[Knote: \u001b[m\u001b[K  candidate expects 2 arguments, 1 provided\n",
-            "     cout << min(d_arr\u001b[01;36m\u001b[K)\u001b[m\u001b[K << endle;\n",
-            "                      \u001b[01;36m\u001b[K^\u001b[m\u001b[K\n",
-            "In file included from \u001b[01m\u001b[K/usr/include/c++/7/bits/char_traits.h:39:0\u001b[m\u001b[K,\n",
-            "                 from \u001b[01m\u001b[K/usr/include/c++/7/ios:40\u001b[m\u001b[K,\n",
-            "                 from \u001b[01m\u001b[K/usr/include/c++/7/istream:38\u001b[m\u001b[K,\n",
-            "                 from \u001b[01m\u001b[K/usr/include/c++/7/sstream:38\u001b[m\u001b[K,\n",
-            "                 from \u001b[01m\u001b[K/usr/include/c++/7/complex:45\u001b[m\u001b[K,\n",
-            "                 from \u001b[01m\u001b[K/usr/include/c++/7/ccomplex:39\u001b[m\u001b[K,\n",
-            "                 from \u001b[01m\u001b[K/usr/include/x86_64-linux-gnu/c++/7/bits/stdc++.h:52\u001b[m\u001b[K,\n",
-            "                 from \u001b[01m\u001b[Ktemp.cpp:1\u001b[m\u001b[K:\n",
-            "\u001b[01m\u001b[K/usr/include/c++/7/bits/stl_algobase.h:243:5:\u001b[m\u001b[K \u001b[01;36m\u001b[Knote: \u001b[m\u001b[Kcandidate: template<class _Tp, class _Compare> constexpr const _Tp& std::min(const _Tp&, const _Tp&, _Compare)\n",
-            "     \u001b[01;36m\u001b[Kmin\u001b[m\u001b[K(const _Tp& __a, const _Tp& __b, _Compare __comp)\n",
-            "     \u001b[01;36m\u001b[K^~~\u001b[m\u001b[K\n",
-            "\u001b[01m\u001b[K/usr/include/c++/7/bits/stl_algobase.h:243:5:\u001b[m\u001b[K \u001b[01;36m\u001b[Knote: \u001b[m\u001b[K  template argument deduction/substitution failed:\n",
-            "\u001b[01m\u001b[Ktemp.cpp:13:22:\u001b[m\u001b[K \u001b[01;36m\u001b[Knote: \u001b[m\u001b[K  candidate expects 3 arguments, 1 provided\n",
-            "     cout << min(d_arr\u001b[01;36m\u001b[K)\u001b[m\u001b[K << endle;\n",
-            "                      \u001b[01;36m\u001b[K^\u001b[m\u001b[K\n",
-            "In file included from \u001b[01m\u001b[K/usr/include/c++/7/algorithm:62:0\u001b[m\u001b[K,\n",
-            "                 from \u001b[01m\u001b[K/usr/include/x86_64-linux-gnu/c++/7/bits/stdc++.h:65\u001b[m\u001b[K,\n",
-            "                 from \u001b[01m\u001b[Ktemp.cpp:1\u001b[m\u001b[K:\n",
-            "\u001b[01m\u001b[K/usr/include/c++/7/bits/stl_algo.h:3450:5:\u001b[m\u001b[K \u001b[01;36m\u001b[Knote: \u001b[m\u001b[Kcandidate: template<class _Tp> constexpr _Tp std::min(std::initializer_list<_Tp>)\n",
-            "     \u001b[01;36m\u001b[Kmin\u001b[m\u001b[K(initializer_list<_Tp> __l)\n",
-            "     \u001b[01;36m\u001b[K^~~\u001b[m\u001b[K\n",
-            "\u001b[01m\u001b[K/usr/include/c++/7/bits/stl_algo.h:3450:5:\u001b[m\u001b[K \u001b[01;36m\u001b[Knote: \u001b[m\u001b[K  template argument deduction/substitution failed:\n",
-            "\u001b[01m\u001b[Ktemp.cpp:13:22:\u001b[m\u001b[K \u001b[01;36m\u001b[Knote: \u001b[m\u001b[K  mismatched types ‘\u001b[01m\u001b[Kstd::initializer_list<_Tp>\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[Kdouble*\u001b[m\u001b[K’\n",
-            "     cout << min(d_arr\u001b[01;36m\u001b[K)\u001b[m\u001b[K << endle;\n",
-            "                      \u001b[01;36m\u001b[K^\u001b[m\u001b[K\n",
-            "In file included from \u001b[01m\u001b[K/usr/include/c++/7/algorithm:62:0\u001b[m\u001b[K,\n",
-            "                 from \u001b[01m\u001b[K/usr/include/x86_64-linux-gnu/c++/7/bits/stdc++.h:65\u001b[m\u001b[K,\n",
-            "                 from \u001b[01m\u001b[Ktemp.cpp:1\u001b[m\u001b[K:\n",
-            "\u001b[01m\u001b[K/usr/include/c++/7/bits/stl_algo.h:3456:5:\u001b[m\u001b[K \u001b[01;36m\u001b[Knote: \u001b[m\u001b[Kcandidate: template<class _Tp, class _Compare> constexpr _Tp std::min(std::initializer_list<_Tp>, _Compare)\n",
-            "     \u001b[01;36m\u001b[Kmin\u001b[m\u001b[K(initializer_list<_Tp> __l, _Compare __comp)\n",
-            "     \u001b[01;36m\u001b[K^~~\u001b[m\u001b[K\n",
-            "\u001b[01m\u001b[K/usr/include/c++/7/bits/stl_algo.h:3456:5:\u001b[m\u001b[K \u001b[01;36m\u001b[Knote: \u001b[m\u001b[K  template argument deduction/substitution failed:\n",
-            "\u001b[01m\u001b[Ktemp.cpp:13:22:\u001b[m\u001b[K \u001b[01;36m\u001b[Knote: \u001b[m\u001b[K  mismatched types ‘\u001b[01m\u001b[Kstd::initializer_list<_Tp>\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[Kdouble*\u001b[m\u001b[K’\n",
-            "     cout << min(d_arr\u001b[01;36m\u001b[K)\u001b[m\u001b[K << endle;\n",
-            "                      \u001b[01;36m\u001b[K^\u001b[m\u001b[K\n",
-            "\u001b[01m\u001b[Ktemp.cpp:13:27:\u001b[m\u001b[K \u001b[01;31m\u001b[Kerror: \u001b[m\u001b[K‘\u001b[01m\u001b[Kendle\u001b[m\u001b[K’ was not declared in this scope\n",
-            "     cout << min(d_arr) << \u001b[01;31m\u001b[Kendle\u001b[m\u001b[K;\n",
-            "                           \u001b[01;31m\u001b[K^~~~~\u001b[m\u001b[K\n",
-            "Hello World!\n"
           ]
         }
       ]
@@ -1518,8 +1428,8 @@
         "\n",
         "    // バブルソートによって、vector を小さい順に並び替え、出力する\n",
         "    vector<int> vec {9, 8, 7, 1, 2, 3};\n",
-        "    for (int i = 0; i < vec.size(); i++) {\n",
-        "        for (int j = 0; j < vec.size() - 1; j++) {\n",
+        "    for (int i = 0; i < vec.size() - 1; i++) {\n",
+        "        for (int j = 0; j < vec.size(); j++) {\n",
         "            if (vec.at(j) > vec.at(j + 1)) swap(vec.at(j), vec.at(j +  1));\n",
         "        }\n",
         "    }\n",
@@ -1528,12 +1438,12 @@
       ],
       "metadata": {
         "id": "_Xu_yqStxBmt",
-        "outputId": "6878e0f9-0184-4902-9623-968fee01dd2f",
+        "outputId": "e7d4e908-1db6-47f8-bda1-9afb2304a3c0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -1550,28 +1460,10 @@
         "!g++ temp.cpp; echo |./a.out"
       ],
       "metadata": {
-        "id": "agz_GUfkHPGe",
-        "outputId": "1608276b-46dc-445b-c519-483582842ff2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "agz_GUfkHPGe"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "8 3\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "7\n",
-            "8\n",
-            "9\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1581,7 +1473,8 @@
         "# __gcd(8, 16) = 8\n",
         "# __gcd(234, 217) = 1\n",
         "# となります。計算量は O(loga)O(log⁡a) なので、とても高速です。\n",
-        "# 最小公倍数を返す標準ライブラリの関数はありませんが、a と b の最小公倍数は a / __gcd(a, b) * b で計算することができます。\n",
+        "# 最小公倍数を返す標準ライブラリの関数はありませんが、a と b の\n",
+        "# 最小公倍数は a / __gcd(a, b) * b で計算することができます。\n",
         "# この書き方は、a * b / __gcd(a, b) よりオーバーフローを起こしにくいです。\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
@@ -1639,7 +1532,8 @@
         "# 乱数 rand random\n",
         "# 基本的に、以下の 2 つをセットで覚えておくと良いと思います。\n",
         "# rand()\t0 以上 2^3 −1 以下のランダムな整数を返す関数です。\n",
-        "# srand((unsigned)time(NULL));\tおまじないです。main 関数の冒頭にこれを付けると、実行ごとに乱数生成結果が変わります。\n",
+        "# srand((unsigned)time(NULL));\tおまじないです。main 関数の冒頭にこれを付けると、\n",
+        "# 実行ごとに乱数生成結果が変わります。\n",
         "# なお、乱数の質が完全とはいえないので、より良質な乱数を生成したい場合は\n",
         "# メルセンヌ・ツイスタ (C++ では std::mt19937) などを使いましょう。\n",
         "%%writefile temp.cpp\n",
@@ -1703,7 +1597,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 実験\n",
+        "# 実験 メルセンヌ・ツイスタ mt19937\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -1764,6 +1658,74 @@
     {
       "cell_type": "code",
       "source": [
+        "# 問題 ランダムに 4 桁の 36 進数を作成せよ \n",
+        "# 36 進数とは a-z0-9 で作る文字列とする\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "const string str = \"0123456789abcdefghijklmnopqrstuvwxyz\";\n",
+        "\n",
+        "string getDigits () {\n",
+        "    string digits = \"\";\n",
+        "    for (int i = 0; i < 4; i++) {\n",
+        "        digits.push_back(str[rand()%36]);\n",
+        "    }\n",
+        "    return digits;\n",
+        "}\n",
+        "\n",
+        "int main () {\n",
+        "    srand((unsigned)time(NULL));\n",
+        "    for (int i = 0; i < 4; i++) cout << getDigits() << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "_9hRmFobrDaG",
+        "outputId": "86f31c6b-bfe1-4f3e-912d-4c8c023082ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo |./a.out"
+      ],
+      "metadata": {
+        "id": "KfJz1YQotZFn",
+        "outputId": "116d1684-1e3c-49de-8478-4d6d0eb97219",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "jhd9\n",
+            "y5dz\n",
+            "xouv\n",
+            "ha57\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 時間計測 clock\n",
         "# 基本的に、以下の 2 つをセットで覚えておくと良いと思います。\n",
         "# clock()\tプログラム実行開始から何単位時間経過したかを整数で返す関数です。\n",
@@ -1777,19 +1739,19 @@
         "int main() {\n",
         "    // 例 1: 実行にかかる時間を計測する\n",
         "    vector<int> vec;\n",
-        "    int ti = clock();\n",
+        "    int ti = clock(); // start 時間\n",
         "    for (int i = 1; i <= 100000; i++) vec.push_back(i);\n",
         "    printf(\"Execution Time: %.4lf sec\\n\", 1.0 * (clock() - ti) / CLOCKS_PER_SEC);\n",
         "}"
       ],
       "metadata": {
         "id": "i58wpJMvucZM",
-        "outputId": "0fb041cb-0af7-404f-ad13-6172f6f02e70",
+        "outputId": "ad53dfab-2503-4bfb-bc3d-c7a9ea846a2f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -1822,6 +1784,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "ldKd1YFL6Rpu"
+      }
     },
     {
       "cell_type": "code",
