Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOgOdJC7fX2lBumw+IjjJ5e",
+      "authorship_tag": "ABX9TyOA16XHt5Z/j3Oqsx6OnYbo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2965,15 +2965,13 @@
         "# a[l], a[l+1], ..., a[r-1] の中に x が含まれない場合は a + r のイテレーター。\n",
         "# そうでない場合は、a[l] から順に見ていったときに初めて a[i] = x となるような a[i] のイテレーター。\n",
         "# a が vector の場合にも使えます。find(a.begin(), a.end(), x) とすると、関数は以下のイテレーターを返します。\n",
-        "\n",
-        "# a[0], a[1], ..., a[a.size() - 1] の中に x が含まれない場合　a.end()。\n",
+        "# a[0], a[1], ..., a[a.size() - 1] の中に x が含まれない場合 a.end()\n",
         "# そうでない場合、初めて a[i] = x となるような a[i] のイテレーター。\n",
         "# なお、find 関数はイテレーターを返しますが、初めて現れる位置を知りたい場合は、find(a + l, a + r, x) - a のように書くと、\n",
         "# 「初めて x が現れるのは配列の何番目の要素か」を返します。計算量は O(r−l) です。\n",
         "\n",
-        "サンプルコード\n",
-        "#include <iostream>\n",
-        "#include <algorithm>\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
@@ -2991,64 +2989,161 @@
         "        if (f == r + 1) cout << \"-1\" << endl; // 存在しない場合\n",
         "        else cout << f << endl; // 存在する場合\n",
         "    }\n",
-        "    return 0;\n",
-        "}\n",
-        "3-23. next_permutation\n",
-        "次の順列を生成する関数です。\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "09inE3HuF3nx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f4282bc4-49fb-4395-f873-6f90c4803a4d"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 3 2 4 5   1 1 3 2 |./a.out"
+      ],
+      "metadata": {
+        "id": "fihlbOb2YtYK",
+        "outputId": "ccc92463-991d-4987-942b-6c684fa5a581",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# next_permutation 次の順列を生成する関数\n",
+        "# next_permutation(a, a + n) を使って、while ループを回す感じでやります。\n",
         "\n",
-        "概要\n",
-        "next_permutation(a, a + n) を使って、while ループを回す感じでやります。\n",
-        "下のコードを見た方がわかりやすいと思います。\n",
+        "# %%writefile temp.cpp\n",
+        "# #include <bits/stdc++.h>\n",
+        "# using namespace std;\n",
         "\n",
-        "// 配列の場合\n",
-        "int n, a[109]; cin >> n;\n",
-        "for (int i = 0; i < n; i++) cin >> a[i];\n",
-        "do {\n",
-        "    for (int i = 0; i < n; i++) {\n",
-        "        if (i) cout << \",\";\n",
-        "        cout << a[i];\n",
-        "    }\n",
-        "    cout << endl;\n",
-        "} while(next_permutation(a, a + n));\n",
-        "while 文は、次の順列が存在しないとき（それより辞書順で大きいような順列が存在しないとき）に抜けます。例えば、n = 3, a = {2, 3, 1} で実行した場合の出力結果は以下のようになります。\n",
+        "# // 配列の場合\n",
+        "# int n, a[109]; cin >> n;\n",
+        "# for (int i = 0; i < n; i++) cin >> a[i];\n",
+        "# do {\n",
+        "#     for (int i = 0; i < n; i++) {\n",
+        "#         if (i) cout << \",\";\n",
+        "#         cout << a[i];\n",
+        "#     }\n",
+        "#     cout << endl;\n",
+        "# } while (next_permutation(a, a + n));"
+      ],
+      "metadata": {
+        "id": "NtO1ThDDQZa4",
+        "outputId": "dfeae992-1d75-4de0-d103-b1d8a49ffe76",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 3 1 2 3 |./a.out"
+      ],
+      "metadata": {
+        "id": "sdSxitklZqJk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# while 文は、次の順列が存在しないとき（それより辞書順で大きいような順列が存在しないとき）に抜けます。\n",
+        "# 例えば、n = 3, a = {2, 3, 1} で実行した場合の出力結果は以下のようになります。\n",
+        "# 2,3,1\n",
+        "# 3,1,2\n",
+        "# 3,2,1\n",
+        "# すべての順列を回したい場合は、a = {1, 2, 3, ..., n} など、小さい順に並んでいる状態にしてください。\n",
+        "# また、vector で next_permutation を使いたい場合は、next_permutation(a.begin(), a.end()) のようにしてください。\n",
         "\n",
-        "2,3,1\n",
-        "3,1,2\n",
-        "3,2,1\n",
-        "すべての順列を回したい場合は、a = {1, 2, 3, ..., n} など、小さい順に並んでいる状態にしてください。 また、vector で next_permutation を使いたい場合は、next_permutation(a.begin(), a.end()) のようにしてください。\n",
+        "# 順列の長さを NN とするとき、次の順列を生成するのに計算量最大 O(N)O(N) かかります。\n",
+        "# また、{1,2,3,...,N} とソートされている場合は、N!N! 回 while 文の中をループします。\n",
         "\n",
-        "順列の長さを NN とするとき、次の順列を生成するのに計算量最大 O(N)O(N) かかります。\n",
-        "また、{1,2,3,...,N1,2,3,...,N} とソートされている場合は、N!N! 回 while 文の中をループします。\n",
-        "algorithm をインクルードすると使えます。\n",
+        "# %%writefile temp.cpp\n",
+        "# #include <bits/stdc++.h>\n",
+        "# using namespace std;\n",
         "\n",
-        "サンプルコード\n",
-        "#include <iostream>\n",
-        "#include <algorithm>\n",
-        "using namespace std;\n",
+        "# int N, A[12][12], B[12], perm[12], ans = 2000000000;\n",
         "\n",
-        "int N, A[12][12], B[12], perm[12], ans = 2000000000;\n",
+        "# int main() {\n",
+        "#     // N 個の都市があり、都市 i から j まで移動するのにかかる時間は A[i][j] 分\n",
+        "#     // 全ての都市を訪れるのに何分かかるか？ ただし、どの都市から出発、どの都市に到着してもよい。\n",
+        "#     // A[i][j] = A[j][i], A[i][i] = 0\n",
+        "#     cin >> N;\n",
+        "#     for (int i = 1; i <= N; i++) {\n",
+        "#         for (int j = 1; j <= N; j++) cin >> A[i][j];\n",
+        "#     }\n",
+        "#     for (int i = 0; i < N; i++) B[i] = i + 1;\n",
         "\n",
-        "int main() {\n",
-        "    // N 個の都市があり、都市 i から j まで移動するのにかかる時間は A[i][j] 分\n",
-        "    // 全ての都市を訪れるのに何分かかるか？　ただし、どの都市から出発、どの都市に到着してもよい。\n",
-        "    // A[i][j] = A[j][i], A[i][i] = 0\n",
-        "    cin >> N;\n",
-        "    for (int i = 1; i <= N; i++) {\n",
-        "        for (int j = 1; j <= N; j++) cin >> A[i][j];\n",
-        "    }\n",
-        "    for (int i = 0; i < N; i++) B[i] = i + 1;\n",
+        "#     do {\n",
+        "#         int sum = 0;\n",
+        "#         for (int i = 0; i < N - 1; i++) {\n",
+        "#             sum += A[B[i]][B[i + 1]];\n",
+        "#         }\n",
+        "#         ans = min(ans, sum);\n",
+        "#     } while(next_permutation(B, B + N));\n",
         "\n",
-        "    do {\n",
-        "        int sum = 0;\n",
-        "        for (int i = 0; i < N - 1; i++) {\n",
-        "            sum += A[B[i]][B[i + 1]];\n",
-        "        }\n",
-        "        ans = min(ans, sum);\n",
-        "    } while(next_permutation(B, B + N));\n",
+        "#     cout << ans << endl;\n",
+        "# }"
+      ],
+      "metadata": {
+        "id": "gPbWU1qFZlsy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ouVucq4rdi-D"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
-        "    cout << ans << endl;\n",
-        "    return 0;\n",
-        "}\n",
         "3-24. __builtin_popcount\n",
         "整数 x を二進数で表したとき、1 であるようなビットの個数を返す関数です。\n",
         "この関数は gcc で利用可能ですが、Visual Studio 2019 などでは使えません。\n",
@@ -3205,7 +3300,7 @@
         "コメント\n"
       ],
       "metadata": {
-        "id": "09inE3HuF3nx"
+        "id": "u1tl_rlRdZ5P"
       },
       "execution_count": null,
       "outputs": []
