Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOA16XHt5Z/j3Oqsx6OnYbo",
+      "authorship_tag": "ABX9TyPr1o1ABVYLvchHiRS0lO+q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2737,7 +2737,7 @@
         },
         "outputId": "44ca4508-a112-4df7-ddbb-b1aa0faf23df"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2760,7 +2760,7 @@
         },
         "outputId": "f9ea192d-0710-4113-d266-ed63cc4c05a3"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2823,7 +2823,7 @@
         },
         "outputId": "3f308d13-43a2-4499-e79e-b3044f825bfe"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2846,7 +2846,7 @@
         "id": "HTVkvY-F7GKh",
         "outputId": "6f0f5949-9860-42d2-a664-8aa40b4e49f9"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2948,15 +2948,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "5tCHBN-7mXxt"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# find\n",
@@ -2998,7 +2989,7 @@
         },
         "outputId": "f4282bc4-49fb-4395-f873-6f90c4803a4d"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3021,7 +3012,7 @@
         "id": "fihlbOb2YtYK",
         "outputId": "ccc92463-991d-4987-942b-6c684fa5a581"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3035,32 +3026,32 @@
     {
       "cell_type": "code",
       "source": [
-        "# next_permutation 次の順列を生成する関数\n",
-        "# next_permutation(a, a + n) を使って、while ループを回す感じでやります。\n",
+        "# next_permutation 順列\n",
+        "# がよくわからないので実験\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
         "\n",
-        "# %%writefile temp.cpp\n",
-        "# #include <bits/stdc++.h>\n",
-        "# using namespace std;\n",
-        "\n",
-        "# // 配列の場合\n",
-        "# int n, a[109]; cin >> n;\n",
-        "# for (int i = 0; i < n; i++) cin >> a[i];\n",
-        "# do {\n",
-        "#     for (int i = 0; i < n; i++) {\n",
-        "#         if (i) cout << \",\";\n",
-        "#         cout << a[i];\n",
-        "#     }\n",
-        "#     cout << endl;\n",
-        "# } while (next_permutation(a, a + n));"
+        "int main(){\n",
+        "    vector<string> vec = {\"book\", \"pencil\", \"eraser\"};\n",
+        "    sort(vec.begin(), vec.end());\n",
+        "    do {\n",
+        "        for (int i = 0; i < vec.size(); i++){\n",
+        "            if (i) cout << \", \";\n",
+        "            cout << vec.at(i);\n",
+        "        }\n",
+        "        cout<<endl;\n",
+        "    } while (next_permutation(vec.begin(), vec.end()));\n",
+        "}"
       ],
       "metadata": {
+        "id": "zuDU_DXc0bz4",
+        "outputId": "12704faf-a4a9-4808-a6e4-a0220ea9e0a5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "NtO1ThDDQZa4",
-        "outputId": "dfeae992-1d75-4de0-d103-b1d8a49ffe76"
+        }
       },
-      "execution_count": 24,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
@@ -3074,13 +3065,39 @@
     {
       "cell_type": "code",
       "source": [
-        "!g++ temp.cpp; echo 3 1 2 3 |./a.out"
+        "!g++ temp.cpp; echo |./a.out"
       ],
       "metadata": {
-        "id": "sdSxitklZqJk"
+        "id": "-W8mfcc90lfR",
+        "outputId": "35a31285-659e-4c32-f5f9-7e143e3bc5e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "book, eraser, pencil\n",
+            "book, pencil, eraser\n",
+            "eraser, book, pencil\n",
+            "eraser, pencil, book\n",
+            "pencil, book, eraser\n",
+            "pencil, eraser, book\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "5tCHBN-7mXxt"
+      }
     },
     {
       "cell_type": "code",
